Prognosemitteilung und Versetungsvermerk angepasst
Anlage 38 und 47 benutzen neue Abschlussbezeichnungen
Versetzungsvermerk bei Versetzung in gymOb angepasst.
siehe Versionsgeschichte

--- a/SK/Vorgänge/Zeugniseinstellungen.ini
+++ b/SK/Vorgänge/Zeugniseinstellungen.ini
@@ -3,7 +3,7 @@
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Format der INI-Datei vom 27.03.2020 (Plümper)
-; INI-Datei für die Sek-I Zeugnisse der Gesamtschule (Anlagen 38 - 45)
+; INI-Datei für die Prognosemitteilung SK (Anlage 47)
 ;
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Allgemeines
@@ -14,8 +14,8 @@
 ; Nicht jede Einstellung wird von jedem Zeugnisformular unterstützt.
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 
-; Anlage 38: Abschlussprognose Gesamtschule
-[Anlage38]
+; Anlage 47: Abschlussprognose Sekundarschule
+[Anlage47]
 ZeugnisVorname=V
 ZeugnisDatumQuelle=A
 ZeugnisDatumAngabe=30.12.1899
@@ -26,133 +26,6 @@ UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
-
-; Anlagen 39 und 40: Zeugnis für Klassen 5-8 und 9-10, Gesamtschule
-[Anlage39u40]
-ZeugnisMitRand=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=V
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=30.12.1899
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=30. Dezember 1899 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=30. Dezember 1899 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=A
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=06
-VersetzungBeginnASDJahrgang=09
-
-; Anlage 41: Überweisungszeugnis Gesamtschule
-[Anlage41]
-ZeugnisMitRand=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=V
-ZeugnisDatumQuelle=E  
-ZeugnisDatumAngabe=30.12.1899
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=06
-
-; Anlagen 42: Abgangszeugnis Gesamtschule
-[Anlage42]
-ZeugnisMitRand=N
-A3ZeugnisSeiten14Ausblenden=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=V
-ZeugnisDatumQuelle=E
-ZeugnisDatumAngabe=30.12.1899
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-SchulabschlussQuelle=H
-WPBeginnASDJahrgang=06
-
-; Anlagen 43: Abschlusszeugnis Hauptschulabschluss
-[Anlage43]
-ZeugnisMitRand=N
-A3ZeugnisSeiten14Ausblenden=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=V
-ZeugnisDatumQuelle=E
-ZeugnisDatumAngabe=30.12.1899
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-SchulabschlussQuelle=H
-WPBeginnASDJahrgang=06
-
-; Anlagen 44: Abschlusszeugnis Hauptschulabschluss nach Klasse 10
-[Anlage44]
-ZeugnisMitRand=N
-A3ZeugnisSeiten14Ausblenden=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=V
-ZeugnisDatumQuelle=E
-ZeugnisDatumAngabe=30.12.1899
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-SchulabschlussQuelle=H
-WPBeginnASDJahrgang=06
-
-; Anlage 45: Abschlusszeugnis Mittlerer Abschluss (3a ohne Q und 3b mit Q)
-[Anlage45]
-ZeugnisMitRand=N
-A3ZeugnisSeiten14Ausblenden=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=V
-ZeugnisDatumQuelle=E
-ZeugnisDatumAngabe=30.12.1899
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-SchulabschlussQuelle=H
-WPBeginnASDJahrgang=06
 
 
 [Erklaerungen]
