--- a/HS/Zeugniseinstellungen.ini
+++ b/HS/Zeugniseinstellungen.ini
@@ -21,7 +21,7 @@ ZeugnisMitRand=N
 FarbeNotenfeld=192,192,192
 VersetzungBeginnASDJahrgang=06
 ZeugnisVorname=V
-ZeugnisDatumQuelle=Z
+ZeugnisDatumQuelle=V
 ZeugnisDatumAngabe=30.12.1899
 ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=30. Dezember 1899 um 08:00 Uhr
