--- a/SK/integrativ/Zeugniseinstellungen.ini
+++ b/SK/integrativ/Zeugniseinstellungen.ini
@@ -16,7 +16,7 @@
 
 [Anlage46]
 ZeugnisMitRand=N
-ZeugnisDatumQuelle=Z
+ZeugnisDatumQuelle=V
 ZeugnisDatumAngabe=01.08.2019
 ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
@@ -39,7 +39,7 @@ ZeugnisVorname=V
 
 [Anlage48und49]
 ZeugnisMitRand=N
-ZeugnisDatumQuelle=Z
+ZeugnisDatumQuelle=V
 ZeugnisDatumAngabe=01.08.2019
 ZeugnisInformationenQuelle=I
 ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
