--- a/GY/Zeugniseinstellungen.ini
+++ b/GY/Zeugniseinstellungen.ini
@@ -185,7 +185,8 @@ SchulabschlussQuelle=H
 ; mögliche Angaben: 
 ; S=Schulleitung aus Datenbank
 ; V=stellvertretende Schulleitung aus Datenbank
-; A=Abteilungsleitung aus Datenbank
+; A=Abteilungsleitung aus Datenbank, Bezeichnung "Abteilungsleiter/in"
+; B=Abteilungsleitung und Bezeichnung aus der Datenbank. Genutzt wird der Eintrag unter "Bezeichnung" bei den Klassengruppen/Abteilungen.
 ; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenSLALText.
 ; I=Text aus INI-Datei, funktioniert wie T, allerdings wird der Defaulttext aus UnterschriftenSLALText ohne weitere Nachfrage genutzt.
 ;
