--- a/HS/Zeugniseinstellungen.ini
+++ b/HS/Zeugniseinstellungen.ini
@@ -44,7 +44,7 @@ ZeugnisMitRand=N
 FarbeNotenfeld=192,192,192
 VersetzungBeginnASDJahrgang=06
 ZeugnisVorname=V
-ZeugnisDatumQuelle=E
+ZeugnisDatumQuelle=Z
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenSLAL=S
 UnterschriftenSLALText=Schulleiter/in oder Vertretung
