--- a/Inklusion_Lernstand/Ankreuzform/Sek1-Inklusionszeugnis_Ankreuzform.ini
+++ b/Inklusion_Lernstand/Ankreuzform/Sek1-Inklusionszeugnis_Ankreuzform.ini
@@ -9,6 +9,7 @@ Mathematik
 Arbeitslehre
 KunstMusik
 Fremdsprachen
+Wahlpflichtbereich
 Religion
 Sport
 
@@ -31,10 +32,9 @@ FachKopfSichtbar06=D;M;SP
 ;FachKopfSichtbar08=D;E;M
 ;FachKopfSichtbar09=KR;RS;MU
 ;FachKopfSichtbar10=D;E;M
-Unterschrift=VN
+
 Ankreuzsymbol=X
 Zeilenhoehe=5
-SchulleitungText=Schulleitung/Vertretung
 PositionSchulleitungText=R
 ASVText=Arbeitsverhalten
 LELSText=
@@ -47,9 +47,31 @@ LELSText=
 ;Zusammenhalten09=Deutsch;Sport
 ;Zusammenhalten10=Deutsch;Sport
 DeutschNotenEinzeln
-SonderpaedagogeText=Fachberater Sonderpädagigik
-KlassenleitungText=Klassenleiterei
 ;WiderspruchInEingangsphaseAusblenden
 NachnameInVersetzungsvermerk
+
 ;ASVAusblenden
 BemerkungenAufNeuerSeite=03
+
+; - Falls in Schild ein Eintrag unter "alle Namen" vorhanden ist, diese aber nicht auf das Zeugnis sollen  
+NurRufname
+
+; -------------------------------------------------------------------------------------------------------------------------
+; Unterschriften von Schulleitung, Klassenlehrer und Sonderpädagoge 
+; -------------------------------------------------------------------------------------------------------------------------
+; - Layout der Unterschriften; Optionen: VN, NV, N oder ON: 
+; - VN = Vorname Nachname
+; - NV = Nachname, Vorname
+; - N = Nachname, KlassenlehrerIn
+; - ON = Klassenleitung
+Unterschrift=VN
+
+; Schulleitertext mit vorangestelltem Semikolon deaktivieren, um Schulleiterdaten aus Schild auszulesen
+SchulleitungText=Schulleitung/Vertretung
+PositionSchulleitungText=R
+
+SonderpaedagogeText= Sonderpädagoge Herr Mustermann
+; Klassenleitertext mit vorangestelltem Semikolon deaktivieren, um Klassenlehrer aus Schild auszulesen
+;KlassenleitungText=Klassenleitung
+; - Stellvertretender KL auch anzeigen? Optionen: ja, nein
+UnterschriftMitStVertr=ja
