Notenausgabe in Ankreuzberichten ergänzt

--- a/Inklusion_Lernstand/Ankreuzform/Sek1-Inklusionszeugnis_Ankreuzform.ini
+++ b/Inklusion_Lernstand/Ankreuzform/Sek1-Inklusionszeugnis_Ankreuzform.ini
@@ -19,7 +19,7 @@ Linien
 ;MitJahrgang
 Blocksatz
 SchriftgroesseBemerkungen=10
-NotenAbJahrgang=E2
+MitNotenausgabe
 Zusammmenhalten
 Folgejahrgang
 Vorname
