--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: mkdir .zip
       - run: for i in */; do zip -r ."/.zip/${i%/}_Zeugnisse.$(date +'%d-%m-%Y').${{ github.run_number }}.zip" "$i" *.pdf; done
-      - uses: softprops/action-gh-release@v1
+      - uses: ncipollo/release-action@v1
         with:
           artifacts: "./.zip/*"
           allowUpdates: true
