--- a/SK/integrativ/Zeugniseinstellungen.ini
+++ b/SK/integrativ/Zeugniseinstellungen.ini
@@ -3,7 +3,7 @@
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Format der INI-Datei vom 15.11.2019 (Plümper)
-; INI-Datei für die Sek-I Zeugnisse der Sekundarschule (Anlagen 46 - 60)
+; INI-Datei für die Sek-I Zeugnisse der Sekundarschule - integrativ (Anlagen 46 und 48 - 54)
 ;
 ; Allgemeines
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -173,167 +173,8 @@ WPBeginnASDJahrgang=07
 A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=A
+SchulabschlussQuelle=H
 
-[Anlage55]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=Z
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-VersetzungBeginnASDJahrgang=09
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=V
-
-[Anlage56]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-VersetzungBeginnASDJahrgang=09
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=V
-
-[Anlage57]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=A
-
-[Anlage58]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-A3ZeugnisSeiten14Ausblenden=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=A
-
-
-[Anlage59]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-A3ZeugnisSeiten14Ausblenden=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=A
-
-[Anlage60]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-A3ZeugnisSeiten14Ausblenden=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=A
-
-[Anlage61]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-A3ZeugnisSeiten14Ausblenden=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=A
 
 [Erklaerungen]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
