--- a/SK/kooperativ/Zeugniseinstellungen.ini
+++ b/SK/kooperativ/Zeugniseinstellungen.ini
@@ -3,7 +3,7 @@
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Format der INI-Datei vom 15.11.2019 (Plümper)
-; INI-Datei für die Sek-I Zeugnisse der Sekundarschule (Anlagen 46 - 60)
+; INI-Datei für die Sek-I Zeugnisse der Sekundarschule - kooperativ (Anlagen 55 - 61)
 ;
 ; Allgemeines
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -14,165 +14,6 @@
 ;
 ; Format und Einstellungsdefinitionen vom 27.03.2020 (Plümper)
 
-[Anlage46]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-VersetzungBeginnASDJahrgang=09
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=V
-
-[Anlage48und49]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=Z
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-VersetzungBeginnASDJahrgang=09
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=V
-
-[Anlage50]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=A
-
-[Anlage51]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-A3ZeugnisSeiten14Ausblenden=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=A
-
-[Anlage52]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-A3ZeugnisSeiten14Ausblenden=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=A
-
-[Anlage53]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-A3ZeugnisSeiten14Ausblenden=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=A
-
-[Anlage54]
-ZeugnisMitRand=N
-ZeugnisDatumQuelle=V
-ZeugnisDatumAngabe=01.08.2019
-ZeugnisInformationenQuelle=I
-ZeugnisInformationenWiederanfangAngabe=1. August 2019 um 08:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe1=1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-ZeugnisInformationenElternsprechtagAngabe2=1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
-UnterschriftenSLAL=S
-UnterschriftenSLALText=Schulleiter/in oder Vertretung
-UnterschriftenKL=K
-UnterschriftenKLText=Klassenlehrer/in
-UnterschriftenMitNachnamen=J
-UnterschriftenMitAmtsbezeichnungen=J
-UnterschriftenMitVornamen=J
-UnterschriftenMitVornamenNurErster=J
-UnterschriftenMitTitel=J
-UnterschriftenMitStvKlassenlehrer=N
-WPBeginnASDJahrgang=07
-A3ZeugnisSeiten14Ausblenden=N
-FarbeNotenfeld=192,192,192
-ZeugnisVorname=A
 
 [Anlage55]
 ZeugnisMitRand=N
@@ -333,6 +174,7 @@ UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=07
 A3ZeugnisSeiten14Ausblenden=N
 FarbeNotenfeld=192,192,192
+SchulabschlussQuelle=H
 ZeugnisVorname=A
 
 [Erklaerungen]
