Abfrageoption für den Beginn an einer deutschen Schule

--- a/Inklusion_Lernstand/Hybridform/Sek1-Lernstandsbericht_Hybridform.ini
+++ b/Inklusion_Lernstand/Hybridform/Sek1-Lernstandsbericht_Hybridform.ini
@@ -28,7 +28,7 @@ MitJahrgang
 Blocksatz
 SchriftgroesseBemerkungen=9
 NotenAbJahrgang=05
-Noten2SpaltigAbJahrgang=10
+Noten2SpaltigAbJahrgang=11
 Zusammenhalten
 Folgejahrgang
 Unterschrift=VN
@@ -42,3 +42,5 @@ BemerkungenAufNeuerSeite=04
 NotenPosition=O
 ;NurRufname
 SchulleitungText=Müller (Schulleitung)
+; dtSchuleSeit=A ==> Abfrage
+;dtSchuleSeit=A
