Seitenumbruch vor Unterschriftenblock über Ini-Datei

--- a/Inklusion_Lernstand/Hybridform/Sek1-Lernstandsbericht_Hybridform.ini
+++ b/Inklusion_Lernstand/Hybridform/Sek1-Lernstandsbericht_Hybridform.ini
@@ -38,9 +38,21 @@ LELSText=Aussagen zur Lernentwicklung und zum Leistungsstand
 WiderspruchInEingangsphaseAusblenden
 NachnameInVersetzungsvermerk
 BemerkungLeertext=-keine-
+
+
+; -------------------------------------------------------------------------------------------------------------------------------------------------------
+;  Seitenumbrüche
+; -------------------------------------------------------------------------------------------------------------------------------------------------------
+
+; - Seitenumbruch vor den Unterschriften durch Entfernen des Semikolons aktivieren
+;UnterschriftenAufNeuerSeite
+
+; - Angabe des Jahrgangs, ab dem Bemerkungen auf einer neuen Seite gedruckt werden sollen
 BemerkungenAufNeuerSeite=04
+
 NotenPosition=O
 ;NurRufname
 SchulleitungText=Müller (Schulleitung)
 ; dtSchuleSeit=A ==> Abfrage
 ;dtSchuleSeit=A
+
