Seitenumbruch vor Unterschriftenblock per Ini-Eintrag

--- a/Inklusion_Lernstand/Ankreuzform/Sek1-Inklusionszeugnis_Ankreuzform.ini
+++ b/Inklusion_Lernstand/Ankreuzform/Sek1-Inklusionszeugnis_Ankreuzform.ini
@@ -51,6 +51,15 @@ DeutschNotenEinzeln
 NachnameInVersetzungsvermerk
 
 ;ASVAusblenden
+
+; -------------------------------------------------------------------------------------------------------------------------------------------------------
+;   Seitenumbrüche
+; -------------------------------------------------------------------------------------------------------------------------------------------------------
+
+; - Seitenumbruch vor den Unterschriften durch Entfernen des Semikolons aktivieren
+;UnterschriftenAufNeuerSeite
+
+; - Angabe des Jahrgangs, ab dem Bemerkungen auf einer neuen Seite gedruckt werden sollen
 BemerkungenAufNeuerSeite=03
 
 ; - Falls in Schild ein Eintrag unter "alle Namen" vorhanden ist, diese aber nicht auf das Zeugnis sollen  
