--- a/Inklusion_Lernstand/Ankreuzform/Sek1-Lernstandsbericht_Ankreuzform.ini
+++ b/Inklusion_Lernstand/Ankreuzform/Sek1-Lernstandsbericht_Ankreuzform.ini
@@ -53,4 +53,13 @@ KlassenleitungText=Klassenleiterei
 ;WiderspruchInEingangsphaseAusblenden
 NachnameInVersetzungsvermerk
 ;ASVAusblenden
+
+; -------------------------------------------------------------------------------------------------------------------------------------------------------
+;   Seitenumbrüche
+; -------------------------------------------------------------------------------------------------------------------------------------------------------
+
+; - Seitenumbruch vor den Unterschriften durch Entfernen des Semikolons aktivieren
+;UnterschriftenAufNeuerSeite
+
+; - Angabe des Jahrgangs, ab dem Bemerkungen auf einer neuen Seite gedruckt werden sollen
 BemerkungenAufNeuerSeite=03
