Sichtbarkeit von leeren Ankreuzkompetenzen über Ini steuerbar

--- a/Inklusion_Lernstand/Ankreuzform/Sek1-Inklusionszeugnis_Ankreuzform.ini
+++ b/Inklusion_Lernstand/Ankreuzform/Sek1-Inklusionszeugnis_Ankreuzform.ini
@@ -33,7 +33,7 @@ FachKopfSichtbar06=D;M;SP
 ;FachKopfSichtbar09=KR;RS;MU
 ;FachKopfSichtbar10=D;E;M
 
-Ankreuzsymbol=X
+
 Zeilenhoehe=5
 PositionSchulleitungText=R
 ASVText=Arbeitsverhalten
@@ -46,11 +46,21 @@ LELSText=
 ;Zusammenhalten08=Deutsch;Sport
 ;Zusammenhalten09=Deutsch;Sport
 ;Zusammenhalten10=Deutsch;Sport
-DeutschNotenEinzeln
+
 ;WiderspruchInEingangsphaseAusblenden
 NachnameInVersetzungsvermerk
 
 ;ASVAusblenden
+
+; -------------------------------------------------------------------------------------------------------------------------------------------------------
+;   Layout der Kompetenzen
+; -------------------------------------------------------------------------------------------------------------------------------------------------------
+
+; - Nicht bewertete Kompetenzen: ausgeben =Z; ausgeben, aber durchstreichen =D; nicht ausgeben =A 
+LeereAnkreuzkompetenzen=A;
+
+DeutschNotenEinzeln
+Ankreuzsymbol=X
 
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ;   Seitenumbrüche
