--- a/Inklusion_Lernstand/Ankreuzform/Sek1-Lernstandsbericht_Ankreuzform.ini
+++ b/Inklusion_Lernstand/Ankreuzform/Sek1-Lernstandsbericht_Ankreuzform.ini
@@ -33,7 +33,7 @@ FachKopfSichtbar06=D;M;SP
 ;FachKopfSichtbar09=KR;RS;MU
 ;FachKopfSichtbar10=D;E;M
 Unterschrift=VN
-Ankreuzsymbol=X
+
 Zeilenhoehe=5
 SchulleitungText=Schulleitung/Vertretung
 PositionSchulleitungText=R
@@ -47,12 +47,22 @@ LELSText=
 ;Zusammenhalten08=Deutsch;Sport
 ;Zusammenhalten09=Deutsch;Sport
 ;Zusammenhalten10=Deutsch;Sport
-DeutschNotenEinzeln
+
 SonderpaedagogeText=Fachberater Sonderpädagigik
 KlassenleitungText=Klassenleiterei
 ;WiderspruchInEingangsphaseAusblenden
 NachnameInVersetzungsvermerk
 ;ASVAusblenden
+
+; -------------------------------------------------------------------------------------------------------------------------------------------------------
+;   Layout der Kompetenzen
+; -------------------------------------------------------------------------------------------------------------------------------------------------------
+
+; - Nicht bewertete Kompetenzen: ausgeben =Z; ausgeben, aber durchstreichen =D; nicht ausgeben =A 
+LeereAnkreuzkompetenzen=A;
+
+DeutschNotenEinzeln
+Ankreuzsymbol=X
 
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ;   Seitenumbrüche
