--- a/Inklusion_Lernstand/Hybridform/Sek1-Inklusionszeugnis_Hybridform.ini
+++ b/Inklusion_Lernstand/Hybridform/Sek1-Inklusionszeugnis_Hybridform.ini
@@ -44,10 +44,10 @@ BemerkungLeertext=-keine-
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 
 ; - Seitenumbruch vor den Unterschriften durch Entfernen des Semikolons aktivieren
-UnterschriftenAufNeuerSeite
+;UnterschriftenAufNeuerSeite
 
 ; - Angabe des Jahrgangs, ab dem Bemerkungen auf einer neuen Seite gedruckt werden sollen
-BemerkungenAufNeuerSeite=04
+BemerkungenAufNeuerSeite=08
 
 
 NotenPosition=O
