--- a/.github/workflows/zipFileCreate.yml
+++ b/.github/workflows/zipFileCreate.yml
@@ -44,9 +44,7 @@ jobs:
       # 5) ZIP-Archiv bauen, ohne Ordner und Dateien aus .zipignore
       - name: Build ZIP (uses .zipignore)
         shell: bash
-        run: |
-          ZIP_NAME="Basisreports-SchILD-NRW-3-v${VERSION}-$(date +'%d.%m.%Y').zip"
-          zip -r ".zip/${ZIP_NAME}" . -x@.zipignore
+        run: for i in */; do zip -r ."/.zip/${i%/}_Zeugnisse.$(date +'%d-%m-%Y').v${{ VERSION }}.zip" "$i" *.pdf; done
 
       # 6) GitHub Release erstellen oder aktualisieren
       - name: Create/Update GitHub Release
